<resources>
    <string name="app_name">Loteria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Carta Principal</string>
    <string name="menu_gallery">Logout</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="image" />
    <string name="number" />
    <string name="released_cards" />
    <string name="Empezar" />
    <string name="board" />
</resources>